--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <meta charset="utf-8">
     <title>SIN-S-VE-4-3</title>
-    <link rel="icon" type="image/png" href="img/logo">
+    <link rel="icon" type="image/png" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2FFacultadIngenieriaIndustrialUG%2F&psig=AOvVaw1VsslKy_N14d3G5ORPjHcF&ust=1673767361681000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJD7prrDxvwCFQAAAAAdAAAAABAE">
 </head>
 <body>
     <h1>Aplicaciones Web</h1>
