--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus dicta nam ex deserunt. Cupiditate eveniet aperiam iure labore eius distinctio dolorum omnis sunt? Perferendis eum maiores necessitatibus, ipsum blanditiis repellat!
                     </p>
                     </div>
-                    <div><img src="img/dito.jpeg"></div>
+                    <div><img src="https://okdiario.com/img/2019/08/07/-son-realmente-muy-curiosos-los-gatos_-1.jpg"></div>
                 </div>
                 <div class="secciones">
                     ><div>
