--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus dicta nam ex deserunt. Cupiditate eveniet aperiam iure labore eius distinctio dolorum omnis sunt? Perferendis eum maiores necessitatibus, ipsum blanditiis repellat!
                         </p>
                         </div>
-                        <div><img src="img/dito2.jpeg"></div>
+                        <div><img src="https://p0.pikist.com/photos/821/945/domestic-cat-cat-thoughtful-vision-animal-sweet-idea-hope-target.jpg"></div>
                     </div>
             </div>
             <div class="menu-secundarios">
