--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus dicta nam ex deserunt. Cupiditate eveniet aperiam iure labore eius distinctio dolorum omnis sunt? Perferendis eum maiores necessitatibus, ipsum blanditiis repellat!
                     </p>
                     </div>
-                    <div><img src="https://i.pinimg.com/originals/22/29/8b/22298bf3c7b6fa6b26254d6ed81b00ca.jpg></div>
+                    <div><img src="https://i.pinimg.com/originals/22/29/8b/22298bf3c7b6fa6b26254d6ed81b00ca.jpg"></div>
                 </div>
             <div class="secciones">
                 ><div>
