--- a/Variedades.html
+++ b/Variedades.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <h1>Pagina en construcion</h1>
-    <div><img src="img2/variedades.jpg"></div>
+    <div><img src="https://lh3.ggpht.com/-8lEUiYUImoM/UcBTII2SGiI/AAAAAAAAou8/jOHXRJ2qbS0/technical-difficulties_thumb.jpg"></div>
 </body>
