--- a/Contacto.html
+++ b/Contacto.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <h1>Pagina en construcion</h1>
-    <div><img src="img2/variedades.jpg"></div>
+    <div><img src="https://pbs.twimg.com/media/EF7e2yTXUAAfKRW.jpg"></div>
 </body>
