--- a/Contacto.html
+++ b/Contacto.html
@@ -6,6 +6,6 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Pagina en construcion</h1>
+    <h1>Contactanos</h1>
     <div><img src="https://pbs.twimg.com/media/EF7e2yTXUAAfKRW.jpg"></div>
 </body>
