--- a/Utilidades.html
+++ b/Utilidades.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <h1>Pagina en construcion</h1>
-    <div><gif src="https://k46.kn3.net/taringa/F/C/9/0/B/1/vagonettas/908.gif"></div>
+    <div><img src="https://dinahosting.com/blog/cont/uploads/2020/07/eror-404.jpg"></div>
 </body>
