--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>SIN-S-VE-4-3</title>
 </head>
 <body>
+    <div class="resolucion">
+        <div class="desktop">
+        </div>
+        <div class="tablet">
+            <h1>Modo Movil</h1>
+        </div>
+    </div>
     <h1>Aplicaciones Web</h1>
     <nav>
         <ul>
