--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="resolucion">
         <div class="desktop">
         </div>
-        <div class="tablet">
+        <div class="Movil">
             <h1>Modo Movil</h1>
         </div>
     </div>
