--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Curriculum Vitae</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -15,6 +16,50 @@
                     </div>
                     <h2>Luis Mera<br><span>Web Developer</span></h2>
                 </div>
+
+                <div class="contactInfo">
+                    <h3 class="title">Informacion de Contacto</h3>
+                    <ul>
+                        <li>
+                            <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                            <span class="text">+593 962 015 583</span>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                            <span class="text">luismera10@gmail.com</span>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+                            <span class="text">https://github.com/lmera10/ug</span>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                            <span class="text">https://www.linkedin.com/in/luis-mera-leon-731264215/</span>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                            <span class="text">Guayaquil, Guayas, Ecuador</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contactInfo education">
+                    <h3 class="title">Educacion</h3>
+                    <ul>
+                        <li>
+                            <h5>2020-Present</h5>
+                            <h4>Ingenieria en Sistemas de Informacion</h4>
+                            <h4>Universidad de Guayaquil</h4>
+                        </li>
+                        <li>
+                            <h5>2010-2014</h5>
+                            <h4>Tecnologia en Redes y Sistemas Operativos</h4>
+                            <h4>Escuela Superior Politecnica del Litoral</h4>
+                        </li>
+                    </ul>
+                </div>
+
+
+
             </div>
 
             <div class="right_Side"></div>
