--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                         </li>
                         <li>
                             <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                            <span class="text">https://github.com/lmera10/ug</span>
+                            <span class="text">github.com/lmera10/ug</span>
                         </li>
                         <li>
                             <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                            <span class="text">https://www.linkedin.com/in/luis-mera-leon-731264215/</span>
+                            <span class="text">www.linkedin.com/in/luis-mera-leon-731264215/</span>
                         </li>
                         <li>
                             <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                            <span class="text">Guayaquil, Guayas, Ecuador</span>
+                            <span class="text">Guayaquil, Ecuador</span>
                         </li>
                     </ul>
                 </div>
@@ -57,12 +57,109 @@
                         </li>
                     </ul>
                 </div>
-
-
-
+                <div class="contactInfo language">
+                    <h3 class="title">Idiomas</h3>
+                    <ul>
+                        <li>
+                            <span class="text">Spanish</span>
+                            <span class="percent">
+                                <div style="width: 100%;"></div>
+                            </span>
+                            
+                        </li>
+                        <li>
+                            <span class="text">English</span>
+                            <span class="percent">
+                                <div style="width: 70%;"></div>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                
             </div>
 
-            <div class="right_Side"></div>
+            <div class="right_Side">
+                <div class="about">
+                    <h2 class="title2">Perfil</h2>
+                    <p></p>
+                </div>
+                <div class="about">
+                    <h2 class="title2">Experiencia</h2>
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>2023 - Present</h5>
+                            <h5>Consorcio STG</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Junior Developer</h4>
+                            <p>Ayudar al equipo de desarrollo con todas las tareas de codificación y diseño de sitios web.</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>2019 - 2022</h5>
+                            <h5>Consorcio Tranvia</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Help Desk</h4>
+                            <p> Realizar labores de soporte informático para los usuarios de la empresa que tienen problemas con el software o el hardware</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>2018 - 2019</h5>
+                            <h5>Consejo Nacional Electoral</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Supervisor de Tecnologia</h4>
+                            <p>Responsable de la instalación, el mantenimiento y las actualizaciones de los sistemas de tecnología de la institucion</p>  
+                        </div>
+                    </div>
+                    <div class="box">  
+                        <div class="year_company">
+                            <h5>2016 - 2018</h5>
+                            <h5>Colegio de Arquitectos del Guayas</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Tecnico de Mantenimiento Informatico</h4>
+                            <p>Responsable del mantenimiento correctivo y preventivo de hardware y software </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about skills">
+                    <h2 class="title2">Habilidades Profesionales</h2>
+                    <div class="box">
+                        <h4>Html</h4>
+                        <div class="percent">
+                            <div style="width: 70%"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Css</h4>
+                        <div class="percent">
+                            <div style="width: 70%"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Java</h4>
+                        <div class="percent">
+                            <div style="width: 85%"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Python</h4>
+                        <div class="percent">
+                            <div style="width: 95%"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>C++</h4>
+                        <div class="percent">
+                            <div style="width: 100%"></div>
+                        </div>
+                    </div>
+                </div>
+        </div>
         </div>
     </body>
 </html>
