--- a/index.html
+++ b/index.html
@@ -159,7 +159,17 @@
                         </div>
                     </div>
                 </div>
-        </div>
+                <div class="about interest">
+                    <h2 class="title2">Intereses</h2>
+                    <ul>
+                        <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
+                        <li><i class="fa fa-microphone" aria-hidden="true"></i>Sining</li>
+                        <li><i class="fa fa-book" aria-hidden="true"></i>Reading</li>
+                        <li><i class="fa fa-futbol-o" aria-hidden="true"></i>Play Futbol</li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
