--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
 
             <div class="right_Side">
                 <div class="about">
-                    <h2 class="title2">Perfil Profesional</h2>
-                    <p>Actualmente cuento con 6 años de experiencia en Areas de Tecnologias de la informacion. Me caracterizo por mi capacidad de innovar y ejecutar procesos para el desarrollo de mis tareas</p>
+                    <h2 class="title2">Perfil</h2>
+                    <p class="justificar">
+                        Actualmente cuento con 6 años de experiencia en Areas de Tecnologias de la informacion. Me caracterizo por mi capacidad de innovar y ejecutar procesos para el desarrollo de mis tareas
+                    </p>
                 </div>
                 <div class="about">
                     <h2 class="title2">Experiencia</h2>
