--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="about">
                     <h2 class="title2">Perfil</h2>
                     <p class="justificar">
-                        Actualmente cuento con 6 años de experiencia en Areas de Tecnologias de la informacion. Me caracterizo por mi capacidad de innovar y ejecutar procesos para el desarrollo de mis tareas
+                        Actualmente cuento con 8 años de experiencia en Areas de Tecnologias de la informacion. Me caracterizo por mi capacidad de innovar y ejecutar procesos para el desarrollo de mis tareas
                     </p>
                 </div>
                 <div class="about">
@@ -93,8 +93,8 @@
                             <h5>Consorcio STG</h5>
                         </div>
                         <div class="text">
-                            <h4>Junior Developer</h4>
-                            <p>Ayudar al equipo de desarrollo con todas las tareas de codificación y diseño de sitios web.</p>
+                            <h4>Desarrollador</h4>
+                            <p>Desarrollo y diseño de sitios web, creacion de herramientas digitales y automatizaciones .</p>
                         </div>
                     </div>
                     <div class="box">
@@ -175,3 +175,4 @@
         </div>
     </body>
 </html>
+
