--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
                 <div class="about skills">
                     <h2 class="title2">Habilidades Profesionales</h2>
                     <div class="box">
-                        <h4>Html</h4>
+                        <h4>Javascript</h4>
                         <div class="percent">
-                            <div style="width: 70%"></div>
+                            <div style="width: 100%"></div>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>Css</h4>
+                        <h4>C#</h4>
                         <div class="percent">
-                            <div style="width: 70%"></div>
+                            <div style="width: 80%"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -151,7 +151,7 @@
                     <div class="box">
                         <h4>Python</h4>
                         <div class="percent">
-                            <div style="width: 95%"></div>
+                            <div style="width: 100%"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -175,4 +175,5 @@
         </div>
     </body>
 </html>
+
 
