--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <div class="imgBx">
                         <img src="https://i.imgur.com/w6EuJ02.jpg" class='img'>
                     </div>
-                    <h2>Luis Mera<br><span>Web Developer</span></h2>
+                    <h2>Luis Mera<br><span>FullStack Developer</span></h2>
                 </div>
 
                 <div class="contactInfo">
@@ -175,5 +175,6 @@
         </div>
     </body>
 </html>
+
 
 
